fix: center align receipt details

--- a/src/Views/Form/Templates/Sequoia/assets/css/receipt.scss
+++ b/src/Views/Form/Templates/Sequoia/assets/css/receipt.scss
@@ -159,6 +159,7 @@
 
 				@media screen and (max-width: $break-phone) {
 					justify-content: center;
+					align-items: center;
 				}
 
 				> i {
